<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:fillViewport="true"
    tools:context="com.example.android.mycats.info.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0E0E6">

        <TextView
            android:id="@+id/infoText"
            android:layout_width="353dp"
            android:layout_height="90dp"
            android:text="@string/help1"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/MyCatText"
            android:layout_width="353dp"
            android:layout_height="250dp"
            android:text="@string/help2"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />

        <TextView
            android:id="@+id/WorksText"
            android:layout_width="353dp"
            android:layout_height="150dp"
            android:text="@string/help4"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.671" />

        <Button
            android:id="@+id/Next2button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#4682B4"
            android:text="Next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.334"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MyCatText"
            app:layout_constraintVertical_bias="0.814" />

        <Button
            android:id="@+id/Backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#4682B4"
            android:text="BAck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.637"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MyCatText"
            app:layout_constraintVertical_bias="0.814" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>